--- a/05-jQuary/tab/index.html
+++ b/05-jQuary/tab/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TAB</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./dist/css/comm.css">
 </head>
 <body>
+
+    <div class="tab">
+        <header class="tab-header">
+            <div class="inner">
+                <h2 class="tab-title">Pick up work</h2>
+                <ul class="tab-nav">
+                    <li class="on"><a href="#">Work1</a></li>
+                    <li><a href="#">Work2</a></li>
+                    <li><a href="#">Work3</a></li>
+                    <li><a href="#">Work4</a></li>
+                    <li><a href="#">Work5</a></li>
+                </ul>
+            </div>
+        </header>
+        <main class="tab-main">
+            <section class="tab-panel">
+                <img src="./dist/images/work-1.jpg" alt="">
+                <div class="txt">
+                    <h3>WORK1</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
+                    <a href="#" class="link-more">READ MORE</a>                
+                </div>
+            </section>
+
+            <section class="tab-panel">
+                <img src="./dist/images/work-2.jpg" alt="">
+                <div class="txt">
+                    <h3>WORK2</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
+                    <a href="#" class="link-more">READ MORE</a>                
+                </div>
+            </section>
+
+            <section class="tab-panel">
+                <img src="./dist/images/work-3.jpg" alt="">
+                <div class="txt">
+                    <h3>WORK3</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
+                    <a href="#" class="link-more">READ MORE</a>                
+                </div>
+            </section>
+
+            <section class="tab-panel">
+                <img src="./dist/images/work-4.jpg" alt="">
+                <div class="txt">
+                    <h3>WORK4</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
+                    <a href="#" class="link-more">READ MORE</a>                
+                </div>
+            </section>
+
+            <section class="tab-panel">
+                <img src="./dist/images/work-5.jpg" alt="">
+                <div class="txt">
+                    <h3>WORK5</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
+                    <a href="#" class="link-more">READ MORE</a>                
+                </div>
+            </section>
+        </main>
+
+    </div>
     
 </body>
 </html>
