--- a/05-jQuary/tab/index.html
+++ b/05-jQuary/tab/index.html
@@ -6,25 +6,29 @@
     <title>TAB</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./dist/css/comm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./dist/js/comm.js"></script>
 </head>
 <body>
 
     <div class="tab">
         <header class="tab-header">
             <div class="inner">
-                <h2 class="tab-title">Pick up work</h2>
+                <h2 class="tab-tit">Pick up work</h2>
                 <ul class="tab-nav">
-                    <li class="on"><a href="#">Work1</a></li>
-                    <li><a href="#">Work2</a></li>
-                    <li><a href="#">Work3</a></li>
-                    <li><a href="#">Work4</a></li>
-                    <li><a href="#">Work5</a></li>
+                    <li class="on"><a href="#work1">Work1</a></li>
+                    <li><a href="#work2">Work2</a></li>
+                    <li><a href="#work3">Work3</a></li>
+                    <li><a href="#work4">Work4</a></li>
+                    <li><a href="#work5">Work5</a></li>
                 </ul>
             </div>
         </header>
         <main class="tab-main">
-            <section class="tab-panel">
-                <img src="./dist/images/work-1.jpg" alt="">
+            <section class="tab-panel on" id="work1">
+                <div class="imgs">
+                    <img src="./dist/images/work-1.jpg" alt="">
+                </div>
                 <div class="txt">
                     <h3>WORK1</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
@@ -32,8 +36,11 @@
                 </div>
             </section>
 
-            <section class="tab-panel">
-                <img src="./dist/images/work-2.jpg" alt="">
+            <section class="tab-panel" id="work2">
+                <div class="imgs">
+                    <img src="./dist/images/work-2.jpg" alt="">
+
+                </div>
                 <div class="txt">
                     <h3>WORK2</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
@@ -41,8 +48,11 @@
                 </div>
             </section>
 
-            <section class="tab-panel">
-                <img src="./dist/images/work-3.jpg" alt="">
+            <section class="tab-panel"id="work3">
+                <div class="imgs">
+                    <img src="./dist/images/work-3.jpg" alt="">
+
+                </div>
                 <div class="txt">
                     <h3>WORK3</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
@@ -50,8 +60,11 @@
                 </div>
             </section>
 
-            <section class="tab-panel">
-                <img src="./dist/images/work-4.jpg" alt="">
+            <section class="tab-panel"id="work4">
+                <div class="imgs">
+                    <img src="./dist/images/work-4.jpg" alt="">
+
+                </div>
                 <div class="txt">
                     <h3>WORK4</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
@@ -59,8 +72,11 @@
                 </div>
             </section>
 
-            <section class="tab-panel">
-                <img src="./dist/images/work-5.jpg" alt="">
+            <section class="tab-panel"id="work5">
+                <div class="imgs">
+                    <img src="./dist/images/work-5.jpg" alt="">
+
+                </div>
                 <div class="txt">
                     <h3>WORK5</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae, sed id necessitatibus est corrupti sunt at reprehenderit ipsam ab quidem odit cum ea soluta sequi maiores facilis natus vitae repudiandae!</p>
