--- a/실무연습/백상예술대상/index.html
+++ b/실무연습/백상예술대상/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/comm.css">
     <title>백상예술대상 제 56회</title>
 </head>
 
@@ -22,8 +24,12 @@
             </nav>
         </header>
 
-        <div class="visual">
-            <img src="../00-design/디자인/백상/slide1.jpg" alt="제56회 백상예술대상 Beaksang Arts Awards">
+        <div class="containner-inner">
+            <img src="./images/슬라이드배경.jpg" alt="images">
+            <div class="visual">
+                <img src="./images/슬라이드 logo.png" alt="제56회 백상예술대상 Beaksang Arts Awards">
+            </div>
+
         </div>
 
         <div class="info-wrap ani-visible">
@@ -42,11 +48,18 @@
         <div class="vod-wrap ani-visible">
 
             <div class="containner inner">
-                <a href="#"><img src="../00-design/디자인/백상/동영상 이미지1.jpg" alt=""><span></span></a>
+                <a href="#"><img src="" alt=""><span></span></a>
 
             </div>
 
         </div>
+
+        <footer>
+            <h2>
+                <img src="./images/하단logo.png" alt="제56회 백상예술대상">
+            </h2>
+
+        </footer>
 
 
 
