--- a/실무연습/hanssem_1/index.html
+++ b/실무연습/hanssem_1/index.html
@@ -43,20 +43,21 @@
             </ul>
         </div>
 
-        <div class="inner">
-
-            <div class="containner-1">
+        <div class="containner-1">
+            <div class="cont-txt">
                 <h2>집꾸밈 사례</h2>
                 <p>한샘의 공간 전문가가 실제 아파트에 제안하는 집꾸밈을 720° VR로 확인해보세요</p>
+            </div>
+            
                 <ul class="middle_slide">
                     <li><a href="#"><img src="./images/집꾸밈사례.jpg" alt="정자동 상록우성아파트 86m2(26평형) 혼자살던 신혼 집이 아늑한 신혼집으로"></a>
                     </li>
                     <li><a href="#"><img src="./images/사례2.jpg"
                                 alt="신천동 파크리오아파트 109m2(33평형) 모던한 분위기가 물씬! 세 식구의 보금자리"></a></li>
                 </ul>
-            </div>
-
         </div>
+
+
         <div class="store_banner">
             <h2>가까운 매장 찾아보기</h2>
             <p>전문 상담원이 실제 주거환경에 맞춘 공간디자인을 제안합니다.<br>
