--- a/실무연습/한진칼/index.html
+++ b/실무연습/한진칼/index.html
@@ -1,141 +1,125 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>한진KAL</title>
-    <script src="./jquery-3.5.1.min.js"></script>
-    <script src="./comm.js"></script>
-    <link rel="stylesheet" href="./comm.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 반응형 페이지 뷰포트 설정 -->
+  <meta name="apple-mobile-web-app-title" content="벽초지수목원" />
+  <title>한진그룹</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0,target-densitydpi=medium-dpi">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <meta name="format-detection" content="telephone=no">
+  <meta property="og:site_name" content="한진칼">
+  <meta property="og:url" content="http://www..co.kr">
+  <meta property="og:title" content="한진칼">
+  <meta property="og:description" content="한진칼">
+  <link rel="stylesheet" href="./dist/vendor/line-awesome/css/line-awesome.css"/> <!-- 이미지 아이콘 -->
+  <link rel="stylesheet" href="./dist/vendor/slick/slick.css" />  <!-- 이미지 슬라이드 -->
+  <link rel="stylesheet" href="./dist/vendor/slick/slick-theme.css" />  <!-- 이미지 슬라이드 테마 -->
+  <link rel="stylesheet" type="text/css" href="./dist/css/comm.css">   <!-- my css -->
 </head>
-
 <body>
+<div id="skipnavigation">
+    <a href="#gnb"><span>주메뉴 바로가기</span></a>
+    <a href="#main"><span>본문 바로가기</span></a>
+    <a href="#login"><span>로그인 바로가기</span></a>
+  </div>
+  <div class="wrap">
+    <!-- header -->
+    <header>
+      <div class="inner_header">
+        <h1>
+          <a href="#"><img src="./img/hj_logo.png" alt=""> 한진 그룹</a>
+        </h1>
+        <span>전체메뉴│ English</span>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">한진그룹</a>
+              <ul>
+                <li><a href="#">하나-1</a></li>
+                <li><a href="#">하나-2</a></li>
+                <li><a href="#">하나-3</a></li>
+                <li><a href="#">하나-4</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">한진칼</a>
+              <ul>
+                <li><a href="#">둘-1</a></li>
+                <li><a href="#">둘-2</a></li>
+                <li><a href="#">둘-3</a></li>
+                <li><a href="#">둘-4</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">사회공헌</a>
+              <ul>
+                <li><a href="#">셋셋셋-1</a></li>
+                <li><a href="#">셋셋셋-2</a></li>
+                <li><a href="#">셋셋셋-3</a></li>
+                <li><a href="#">셋셋셋-4</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">홍보센터</a>
+              <ul>
+                <li><a href="#">넷넷넷-1</a></li>
+                <li><a href="#">넷넷넷-2</a></li>
+                <li><a href="#">넷넷넷-3</a></li>
+                <li><a href="#">넷넷넷-4</a></li>
+                <li><a href="#">넷넷넷-5</a></li>
+                <li><a href="#">넷넷넷-6</a></li>
+                <li><a href="#">넷넷넷-7</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">한진인</a>
+              <ul>
+                <li><a href="#">다섯-1</a></li>
+                <li><a href="#">다섯-2</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- //header -->
+    <!-- container -->
+    <div class="container">
+        <img src="" alt="">
+      <div class="contents">
+        <div class="sec_g sec_">
+          <h2>타이틀</h2>
+          <div class="cont_g">
 
-    <div class="wrap">
-        <header>
-            <h1><a href="#">대한투어</a> </h1>
-            <div class="gnb_bar">
-                <ul class="nav-depth1">
-                    <li><a href="#">이용안내 </a>
-                        <ul class="nav-depth2">
-                            <li><a href="#">이용방법</a></li>
-                            <li><a href="#">이용시간</a></li>
-                            <li><a href="#">이용요금</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">이벤트정보 </a>
-                        <ul class="nav-depth2">
-                            <li><a href="#">현장이벤트</a></li>
-                            <li><a href="#">온라인이벤트</a></li>
-                            <li><a href="#">이벤트예약</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">프로그램 </a>
-                        <ul class="nav-depth2">
-                            <li><a href="#">프로그램안내</a></li>
-                            <li><a href="#">온라인예약</a></li>
-                            <li><a href="#">단체예약상담</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">고객센터</a>
-                        <ul class="nav-depth2">
-                            <li><a href="#">공지사항</a></li>
-                            <li><a href="#">자주묻는질문</a></li>
-                            <li><a href="#">자료실</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </header>
-
-        <div class="main">
-            <div class="slide">
-                <ul>
-                    <li><img src="./images/slide1_수정2.jpg" alt="지상 최대 파라다이스 Aloha 하와이 휴양 / 관광 / 쇼핑 / 액티비티까지 모든 것이 가능하다">
-                    </li>
-                    <li><img src="./images/slide2_수정.jpg" alt="가장 아름다운 유럽! 파리 유럽에서의 매력적인 여행"></li>
-                    <li><img src="./images/slide3_수정.jpg" alt="동남아 출국국가 1위 베트남 다낭, 하노이, 호치민, 달랏, 나트랑, 푸꾸옥 베스트 베케이션 베트남">
-                    </li>
-                </ul>
-            </div>
-
-            <div class="containner">
-                <div class="tap">
-                    <section class="on">
-                        <h2>공지사항</h2>
-                        <div class="cont">
-                            <ul class="lst-bbs">
-                                <li><a href="#"> ·투어/입장권 시스템 점검에 따른 이용제한 안내</a></li>
-                                <li><a href="#"> ·TMS 서버 증설 작업으로 인한 서비스 이용 제한 안내</a></li>
-                                <li><a href="#"> ·대한투어 마일리지 및 여행상품권 유효기간 1년 연장 안내</a></li>
-                                <li><a href="#"> ·A380 스카이라인 여행 고객 성원 감사 이벤트 당첨자 발표</a></li>
-                                <li><a href="#"> ·[개인정보보호] 개인정보 처리방침 변경 안내</a></li>
-                            </ul>
-                        </div>
-                    </section>
-                    <section>
-                        <h2>갤러리</h2>
-                        <div class="cont">
-                            <ul class="lst-gallery">
-                                <li><img src="./images/gallery1-축소.jpg" alt=""></li>
-                                <li><img src="./images/gallery2-축소.jpg" alt=""></li>
-                                <li><img src="./images/gallery3-축소.jpg" alt=""></li>
-                            </ul>
-                        </div>
-                    </section>
-                </div>
-                <section class="col2">
-                    <h2>배너</h2>
-                    <div class="cont">
-                        <ul class="banner">
-                            <li><a href="#"><img src="./images/banner2.png" alt=""></a></li>
-                        </ul>
-                    </div>
-                </section>
-                <section class="col3">
-                    <h2>바로가기</h2>
-                    <div class="cont">
-                        <a href="#"><img src="./images/goto1-아이콘.jpg" alt="강릉">강릉</a>
-                        <a href="#"><img src="./images/goto2-아이콘.jpg" alt="부산">부산</a>
-                        <a href="#"><img src="./images/goto3-아이콘.jpg" alt="여수">여수</a>
-                        <a href="#"><img src="./images/goto4-아이콘.jpg" alt="경주">경주</a>
-                    </div>
-                </section>
-            </div>
+          </div>
         </div>
-
-        <footer>
-            <h1>대한투어</h1>
-            <div class="last">
-                <ul class="lst3">
-                    <li><a href="#">회사소개</a></li>
-                    <li><a href="#">이용약관</a></li>
-                    <li><a href="#">개인정보처리방침</a></li>
-                    <li><a href="#">여행약관</a></li>
-                    <li><a href="#">해외여행자보험</a></li>
-                    <li><a href="#">마케팅제휴</a></li>
-                    <li><a href="#">공식인증예약센터 검색</a></li>
-                </ul>
-                <div class="copyright">
-                    Copyright<br> COPYRIGHTⓒ HANATOUR SERVICE INC. ALL RIGHTS RESERVED
-
-                </div>
-            </div>
-        </footer>
+      </div>
+      <aside></aside>
     </div>
-
-    <div id="modal">
-        <div class="inner">
-            <img src="./images/modal.jpg" alt="10만원 국민관광상품권 증정 똑똑한 호캉스 이벤트  호텔 예약 후 안전여행 인증하면 10만원 상품권 GET!">
-            <button>닫기</button>
-        </div>
-
-
-    </div>
-
-
+    <!-- //container -->
+    <!-- footer -->
+    <footer>
+      <h1><a href="#">회사로고</a></h1>
+      <div class="col_right">
+        <address></address>
+        <div class="copyright"></div>
+      </div>
+    </footer>
+    <!-- //footer -->
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> <!-- 필수 jQuery -->
+  <script src="./dist/vendor/bootstrap/bootstrap.min.js"></script> <!-- 부트스트랩 -->
+  <script src="./dist/vendor/slick/slick.min.js"></script> <!-- 이미지 슬라이드 -->
+  <script src="./dist/vendor/jquery.scrollUp.min.js"></script> <!-- scroll top -->
+  <script src="./dist/js/comm.js"></script> <!-- my js -->
+  <!-- ie9 이하 버전에서 잘 보이도록 추가 -->
+  <!--[if lt IE 9]>
+  	<script src="./dist/js/module/html5.js"></script>
+  	<script src="./dist/js/module/respond.min.js"></script>
+  <![endif]-->
 </body>
 
 </html>
